--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -100,6 +100,9 @@
         background-color: black;
         color: white;
       }
+      .add:hover {
+        opacity: 0.625;
+      }
       .favs {
         border: solid 1px rgba(128, 128, 128, 0.5);
         background-color: transparent;
